bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: faceless-video-app
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: faceless-video-app
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: backend
                  image: faceless-video-app-backend
                  imagePullPolicy: IfNotPresent
                  args:
                    - uvicorn
                    - app.main:app
                    - --host
                    - 0.0.0.0
                    - --port
                    - 8000
                  ports:
                    - name: backend-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-storage
                      mountPath: /app/storage
            volumes:
                - name: app-storage
                  persistentVolumeClaim:
                    claimName: backend-storage-vol
