bridge/base/beat-deployment.yaml
#! beat-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: beat
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: beat
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: faceless-video-app
            com.docker.compose.service: beat
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: faceless-video-app
                com.docker.compose.service: beat
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: beat
                  image: faceless-video-app-beat
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - -A
                    - app.worker.celery_app
                    - beat
                    - --loglevel=info
                  ports:
                    - name: beat-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-storage
                      mountPath: /app/storage
            volumes:
                - name: app-storage
                  persistentVolumeClaim:
                    claimName: beat-storage-vol
