bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: faceless-video-app
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: faceless-video-app
                com.docker.compose.service: redis
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: redis
                  image: redis:7
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 5
                    timeoutSeconds: 3
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
