bridge/base/worker-deployment.yaml
#! worker-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: worker
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: faceless-video-app
            com.docker.compose.service: worker
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: faceless-video-app
                com.docker.compose.service: worker
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: worker
                  image: faceless-video-app-worker
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - -A
                    - app.worker.celery_app
                    - worker
                    - --loglevel=info
                    - --concurrency=2
                  ports:
                    - name: worker-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-storage
                      mountPath: /app/storage
            volumes:
                - name: app-storage
                  persistentVolumeClaim:
                    claimName: worker-storage-vol
