bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: frontend
    ports:
        - name: frontend-3000
          port: 3000
          targetPort: frontend-3000
