bridge/base/worker-expose.yaml
#! worker-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: worker
    namespace: faceless-video-app
    labels:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: worker
spec:
    selector:
        com.docker.compose.project: faceless-video-app
        com.docker.compose.service: worker
    ports:
        - name: worker-8000
          port: 8000
          targetPort: worker-8000
